--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,68 @@ body {
 
 .hero {
   background: #DFCCC2;
+  position: relative;
+}
+
+.hero .loading {
+  width: 100%;
+  height: 100vh;
+  z-index: 5;
+  position: fixed;
+}
+
+.hero .loading .pink {
+  position: absolute;
+  background: #DFCCC2;
+  width: 100%;
+  height: 100%;
+  z-index: 7;
+}
+
+.hero .loading .grey {
+  position: absolute;
+  background: #C5CEBD;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  overflow: hidden;
+  z-index: 6;
+}
+
+.hero .loading .grey .load .load-text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: relative;
+  overflow: hidden;
+}
+
+.hero .loading .grey .load .load-text .load-overlay {
+  background: #C5CEBD;
+  position: absolute;
+  width: 0%;
+  height: 100%;
+  z-index: 7;
+}
+
+.hero .loading .grey .load .load-text .letter {
+  letter-spacing: -1.2px;
+  font-family: "Lexend Deca";
+  font-size: 14vw;
 }
 
 .hero nav {
