--- a/styles.scss
+++ b/styles.scss
@@ -18,8 +18,62 @@ body {
     color: #fff;
 }
 
+
 .hero {
     background: #DFCCC2;
+    position: relative;
+
+
+    .loading {
+        width: 100%;
+        height: 100vh;
+        z-index: 5;
+        position: fixed;
+    
+        .pink{
+            position: absolute;
+            background: #DFCCC2;
+            width: 100%;
+            height: 100%;
+            z-index: 7;
+        }
+
+        .grey {
+            position: absolute;
+            background: #C5CEBD;    
+            width: 100%;
+            height: 100%;
+            @include flex;
+            overflow: hidden;
+            z-index: 6;
+           
+
+            .load {
+
+                .load-text {
+                    @include flex;
+                    position: relative;
+                    overflow: hidden;
+
+                    .load-overlay {
+                        background: #C5CEBD;    
+                        position: absolute;
+                        width: 0%;
+                        height: 100%;
+                        z-index: 7;
+                        // transform: translateX(-100%);
+                    }
+
+                    .letter {
+                        letter-spacing: -1.2px;
+                        font-family: "Lexend Deca";
+                        font-size: 14vw;
+                    }
+
+                }
+            }
+        }
+    }
 
     nav {
 
