--- a/styles.scss
+++ b/styles.scss
@@ -20,7 +20,7 @@ body {
 
 
 .hero {
-    background: #DFCCC2;
+    background: #E6C2AF;
     position: relative;
 
 
@@ -32,7 +32,7 @@ body {
     
         .pink{
             position: absolute;
-            background: #DFCCC2;
+            background: #E6C2AF;
             width: 100%;
             height: 100%;
             z-index: 7;
@@ -40,7 +40,7 @@ body {
 
         .grey {
             position: absolute;
-            background: #C5CEBD;    
+            background: #b0bec5;    
             width: 100%;
             height: 100%;
             @include flex;
@@ -56,7 +56,7 @@ body {
                     overflow: hidden;
 
                     .load-overlay {
-                        background: #C5CEBD;    
+                        background: #b0bec5;    
                         position: absolute;
                         width: 0%;
                         height: 100%;
@@ -396,6 +396,7 @@ body {
             margin-top: 50px;
             margin-right: -7.5%;
             z-index: 3;
+            overflow: hidden;
 
             @include bp(desktop) {
                 max-width: 30vw;
@@ -598,6 +599,7 @@ body {
                 max-width: 12vw;
                 margin-top: 30px;
                 margin-left: 36px;
+                overflow: hidden;
 
                 @include bp(desktop) {
                     max-width: 15vw;
@@ -716,6 +718,7 @@ body {
                 line-height: 48px;
                 letter-spacing: -1.5;
                 font-family: "Lexend Deca";
+                overflow: hidden;
 
                 @include bp(tablet) {
                     font-size: 25px;
@@ -819,7 +822,7 @@ body {
 
 .main {
     padding: 150px 0;
-    background: #C5CEBD;
+    background: #b0bec5;
     display: flex;
 
     @include bp(mobile-landscape) {
@@ -1092,7 +1095,7 @@ body {
 .services-block {
     font-family: "Lexend Deca";
     padding: 10.4vw 14.4vw;
-    background: #dfccc2;
+    background: #E6C2AF;
 
     
     .services-title {
@@ -1217,17 +1220,19 @@ body {
 
                     @include bp(tablet) {
                         min-width: 25vw;
+                        
                     }
 
                     @include bp(mobile-landscape) {
                         min-width: 50vw;
-                        right: 20vw;
+                        right: 5vw;
                         bottom: -12vw;
+
                     }
 
                     @include bp(mobile) {
                         min-width: 50vw;
-                        right: 20vw;
+                        right: 5vw;
                         bottom: -12vw;
                     }
 
@@ -1406,82 +1411,90 @@ body {
 }
 }
 
-.passion  {
-    background-image: url("./images/woman-bg.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    min-height: 50vw;
-    background-position: bottom;
+.passion-cont {
     position: relative;
-    display: flex;
-    font-family: "DM Sans";
-    justify-content: center;
-    padding-bottom: 7.3vw;
-    align-items: flex-end;
 
-    @include bp(mobile-landscape) {
-        min-height: 70vw;
-    }
-
-    @include bp(mobile) {
-        min-height: 70vh;
-    }
-
-    .overlay {
-        background-color: rgba(209, 209, 209, 0.2);
-        position: absolute;
+    .passion  {
+        background-image: url("./images/woman-bg.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100%;
+        height: 100vh;
+        background-position: bottom;
+        position: relative;
+        display: flex;
+        font-family: "DM Sans";
+        justify-content: center;
+        padding-bottom: 7.3vw;
+        align-items: flex-end;
+        position: sticky;
         top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        z-index: 2;
-    }
-
-
-    .passion-inner {
-        text-align: center;
-
-        .passion-title {
-            font-family: "Lexend Deca";
-            font-size: 56px;
-            margin-bottom: 20px;
-
-            @include bp(tablet) {
-                font-size: 48px;
-            }
-
-            @include bp(mobile-landscape) {
-                font-size: 46px;
-            }
-
-            @include bp(mobile) {
-                font-size: 30px;
-                max-width: 95%;
-                margin: 0 auto;
+    
+        @include bp(mobile-landscape) {
+            min-height: 70vw;
+        }
+    
+        @include bp(mobile) {
+            min-height: 70vh;
+        }
+    
+        .overlay {
+            background-color: rgba(209, 209, 209, 0.2);
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            z-index: 2;
+        }
+    
+    
+        .passion-inner {
+            text-align: center;
+    
+            .passion-title {
+                font-family: "Lexend Deca";
+                font-size: 56px;
                 margin-bottom: 20px;
-            }
-         }
-
-
-         .passion-text {
-             max-width: 70%;
-             margin: 0 auto;
-             line-height: 24px;
-
-             @include bp(tablet) {
-                 max-width: 65%;
-                 line-height: 20px;
-            }
-
-            @include bp(tablet) {
-                max-width: 80%;
-                line-height: 20px;
-           }
-         }
-
+    
+                @include bp(tablet) {
+                    font-size: 48px;
+                }
+    
+                @include bp(mobile-landscape) {
+                    font-size: 46px;
+                }
+    
+                @include bp(mobile) {
+                    font-size: 30px;
+                    max-width: 95%;
+                    margin: 0 auto;
+                    margin-bottom: 20px;
+                }
+             }
+    
+    
+             .passion-text {
+                 max-width: 70%;
+                 margin: 0 auto;
+                 line-height: 24px;
+    
+                 @include bp(tablet) {
+                     max-width: 65%;
+                     line-height: 20px;
+                }
+    
+                @include bp(tablet) {
+                    max-width: 80%;
+                    line-height: 20px;
+               }
+             }
+    
+        }
     }
 }
+
+
 
 
 .appointment-container {
@@ -1740,7 +1753,7 @@ body {
 
 .footer {
     padding: 7vw 6vw;
-    background: #DFCCC2;
+    background: #E6C2AF;
     display: flex;
     align-items: center;
     justify-content: space-between;
